fix alignment.
RT #477

--- a/frontend/src/components/shared/popUps/userModal/userModal.scss
+++ b/frontend/src/components/shared/popUps/userModal/userModal.scss
@@ -147,7 +147,7 @@
   .MuiDialogActions-root {
     justify-content: center;
     margin-bottom: 12px;
-    padding: 20px 26px 20px 26px;
+    padding: 20px 23px 20px 26px;
     .cancel-btn {
       background: #efe1ff;
       color: #773cbd;
